# RTG

./: .gitignore  README.md
ros2_ws/src/ggcnn/: DepthMapRandom3DRotation.py  README.md  train_ggcnn.py
ros2_ws/src/ggcnn/models/: __init__.py  ggcnn2.py
ros2_ws/src/ggcnn/utils/data/: grasp_data.py
ros2_ws/src/ggcnn/utils/dataset_processing/: evaluation.py  grasp.py
ros2_ws/src/moveit_config/: .setup_assistant  package.xml
ros2_ws/src/moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  sgr532.ros2_control.xacro  sgr532.srdf  sgr532.urdf.xacro
ros2_ws/src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/my_bridge_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_bridge_pkg/include/my_bridge_pkg/: bridge_node.hpp
ros2_ws/src/my_bridge_pkg/launch/: bridge_launch.py
ros2_ws/src/my_bridge_pkg/msg/: GraspPoint.msg
ros2_ws/src/my_bridge_pkg/src/: bridge_node.cpp  bridge_node_main.cpp
ros2_ws/src/object_interface/: CMakeLists.txt  package.xml
ros2_ws/src/object_interface/launch/: ui.launch.py
ros2_ws/src/object_interface/src/: main.cpp  qt_node.cpp  qt_node.hpp
ros2_ws/src/sagittarius_descriptions/: CMakeLists.txt  package.xml
ros2_ws/src/sagittarius_descriptions/launch/: description.launch.py  display.launch.py  gazebo.launch.py
ros2_ws/src/sagittarius_descriptions/urdf/: sgr532.urdf  sgr532.urdf.xacro
ros2_ws/src/sdk_sagittarius_arm/: CMakeLists.txt  package.xml  sagittarius_system_plugins.xml
ros2_ws/src/sdk_sagittarius_arm/include/sdk_sagittarius_arm/: sagittarius_system.hpp  sdk_sagittarius_arm_common.hpp  sdk_sagittarius_arm_common_serial.hpp  sdk_sagittarius_arm_real.hpp
ros2_ws/src/sdk_sagittarius_arm/launch/: Forward_kinematics.launch.py  Inverse_kinematics.launch.py  run_sagittarius.launch.py  run_sagittarius_pn.launch.py  rviz_control_sagittarius.launch.py  sdk_sagittarius_arm.launch.py
ros2_ws/src/sdk_sagittarius_arm/scripts/: Forward_kinematics.py  Inverse_kinematics.py  getpose.py  moveit_cartesian_demo.py  precision_test.py  switchAB.py
ros2_ws/src/sdk_sagittarius_arm/src/: sagittarius_system.cpp  sdk_sagittarius_arm.cpp  sdk_sagittarius_arm_common.cpp  sdk_sagittarius_arm_common_serial.cpp  sdk_sagittarius_arm_real.cpp
ros2_ws/src/sgr532_moveit_demo/: CMakeLists.txt  package.xml
ros2_ws/src/sgr532_moveit_demo/src/: sgr532_pick_place.cpp
ros2_ws/src/yolov8_infer/: package.xml  setup.cfg  setup.py
ros2_ws/src/yolov8_infer/src/: yolov8_infer.cpp  yolov8_infer.hpp
ros2_ws/src/yolov8_infer/yolov8_infer/: yolo_infer_3d_node.py  yolo_infer_node.py
