<?xml version="1.0"?>
<package format="3">
  <name>my_bridge_pkg</name>
  <version>0.0.1</version>
  <description>Bridge package that defines GraspPoint msg and a bridging node</description>

  <maintainer email="ruoyin_wang0908@icloud.com">RuoyinWang</maintainer>
  <license>Apache-2.0</license>

  <!-- 如果包中同时包含节点实现，建议移除下面这一行 -->
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 构建系统 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 依赖项 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>diagnostic_updater</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
