<?xml version="1.0"?>
<package format="3">
  <name>object_interface</name>
  <version>0.1.0</version>
  <description>Example for Qt+ROS2 subscription to image and pointcloud, with a custom DetectionInfo.msg.</description>


  <maintainer email="ruoyin_wang0908@icloud.com">RuoyinWang</maintainer>
  <license>Apache-2.0</license>

  <!-- 基础构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 生成并使用自定义消息需要的依赖 -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>



  <!-- 其他依赖：Qt、ROS功能包等 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>my_bridge_pkg</depend>

  <!-- 如果用 Qt5 -->
  <!--<buildtool_depend>ament_cmake_auto</buildtool_depend>    -->
   <!-- <depend>ament_cmake_ros</depend>                       -->
  <exec_depend>qtbase5-dev</exec_depend>                <!-- 或 Qt6 相应依赖 -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
