<package format="3">
  <name>sagittarius_descriptions</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for sagittarius_descriptions.
    This package contains configuration data, 3D models, and launch files
    for the sagittarius_descriptions robot.
  </description>

  <maintainer email="ruoyin_wang0908@icloud.com">Ruoyin Wang</maintainer>
  <license>BSD</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <!-- Optional dependencies (if needed in future development) -->
  <!-- <depend>control_msgs</depend> -->
  <!-- <depend>ros2_control</depend> -->

  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
